2016-12-29         [RELEASE] Release of t3calendar 0.1.0 (Dirk Wenzel)
2016-12-28 5e73a5c [TASK] CalendarWeekFactory and CalendarYearFactory now do use caches too. (Dirk Wenzel)
2016-12-28 16e8eeb [TASK] CacheManagerTrait implemented. CalendarFactory and CalendarMonthFactory now use caches. CalendarDay extended by method getHasItems to prevent expensive usage of f:count view helper in templates. (Dirk Wenzel)
2016-12-27 5850f7b [TASK] occurrences of unused intervals PERIOD_TRIMESTER and PERIOD_SEMESTER removed. (Dirk Wenzel)
2016-12-27 1de99eb [TASK] unit case for CalendarFactory added covering creation of CalendarQuarter (Dirk Wenzel)
2016-12-27 037fd90 [TASK] CalendarQuarter, CalendarQuarterFactory, CalendarQuarterFactoryInterface, CalendarQuarterFactoryTrait implemented. Calendar, CalendarFactory and CalendarController extended to handle period 'quarter' too. (Dirk Wenzel)
2016-12-27 f462c29 [TASK] unit tests for CalendarController added covering invalid 'shift' arguments. (Dirk Wenzel)
2016-12-27 86a9cf5 [TASK] Action methods for day, month, week and year of CalendarController implemented, templates adapted. (Dirk Wenzel)
2016-12-27 09fdec3 [BUGFIX] Fixed error in CalendarFactory where the wrong CalendarDay was produced for period 'day'. (Dirk Wenzel)
2016-12-26 888e3a1 [BUGFIX] fixed error in CalendarWeekFactory caused by changing the $startDate while creating days of week. (Dirk Wenzel)
2016-12-13 a8920d6 [TASK] CalendarConfigurationFactory now implements SingletonInterface (Dirk Wenzel)
2016-12-13 41df952 [BUGFIX] fixed error in CalendarMonthFactory causing wrong number of days. (Refactored using DateTime instead of timestamps) (Dirk Wenzel)
2016-12-11 ae614de [TASK] Templates adapted to use items (Dirk Wenzel)
2016-12-11 1c90543 [TASK] CalendarController->indexAction implemented. Templates, partials, JavaScript, TypoScript and CSS ported from t3events. (Dirk Wenzel)